test/parallel/forall/may-vs-must-par/expr-mustpar-loop-err-inst2ser.bad
class1ser
class2ser
tup=0
tup=0
